src/objects/GPM_Milestone__c.object
<CustomObject>
    <description>This object is used to support the Project object; it allows users to capture unique project milestones.</description>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <formula>IF(NOT(ISPICKVAL( Milestone_Progress__c  , &apos;Completed&apos;)),( Estimated_End_Date__c ) - TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days Remaining is the difference between today&apos;s date and the Estimated End Date. This field will not be calculated when the Milestone Progress is &quot;Completed&quot;.</inlineHelpText>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GPM_Project__c</fullName>
        <label>Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Milestone_Name_link__c</fullName>
        <formula>HYPERLINK(Id,  Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Progress_Flag__c</fullName>
        <formula>IMAGE( 
CASE( Milestone_Status__c , 
&quot;Red&quot;, &quot;/resource/RedFlag&quot;, 
&quot;Yellow&quot;, &quot;/resource/YellowFlag&quot;, 
&quot;Green&quot;, &quot;/resource/GreenFlag&quot;, 
&quot;Blue&quot;, &quot;/resource/BlueFlag&quot;, 
&quot;Grey&quot;, &quot;/resource/GreyFlag&quot;,&quot;/s.gif&quot;), 
CASE( Milestone_Status__c, 
&quot;Red&quot;, &quot;Red&quot;, 
&quot;Yellow&quot;, &quot;Yellow&quot;, 
&quot;Green&quot;, &quot;Green&quot;, 
&quot;Blue&quot;, &quot;Blue&quot;, 
&quot;Grey&quot;, &quot;Grey&quot;, &quot;Milestone Progress Flag&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Progress__c</fullName>
        <inlineHelpText>Describes the progress status of the Milestone.</inlineHelpText>
        <label>Milestone Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <inlineHelpText>Use this field to indicate the progress and health of each milestone</inlineHelpText>
        <label>Milestone Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Milestone Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The contact that this Milestone is assigned to.</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestones (Owner)</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMO_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMO Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestones (PMO Lead)</relationshipLabel>
        <relationshipName>PMOLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <description>Milestone Planned End Date</description>
        <inlineHelpText>Use this field to indicate the date that you anticipate the milestone to end. This date should serve as a baseline and remain unchanged once entered.</inlineHelpText>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <description>Milestone Planned Start Date</description>
        <inlineHelpText>Use this field to indicate the date that you anticipate the milestone to start. This date should serve as a baseline and remain unchanged once entered.</inlineHelpText>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestones (Project Manager)</relationshipLabel>
        <relationshipName>ProjectManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MIL-{0000000}</displayFormat>
        <label>Milestone</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <recordTypes>
        <fullName>Project_Milestone</fullName>
        <active>true</active>
        <description>For Project Central</description>
        <label>Standard Project Milestone</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actual_End_not_earlier_than_Actual_Start</fullName>
        <active>true</active>
        <description>Actual End date cannot be earlier than Actual Start Date</description>
        <errorConditionFormula>Actual_End_Date__c &lt;  Actual_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual End date cannot be earlier than Actual Start Date</errorMessage>
    </validationRules>
</CustomObject>